2015-01-10  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* win32/msc/Makefile: Fixed incorrect file extensions.


2014-11-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* colours_ntsc.c, atari_ntsc/atari_ntsc_impl.h: Fixed mathematics in the YIQ
  computations - although the resulting colors were correct, the names of i
  and q variables were swapped in the sources.

* colours_ntsc.c, colours_pal.c, colours.[ch], pal_blending.c, filter_ntsc.c,
  atari_ntsc/atari_ntsc.c, DOC/NEWS: Fixed computation of gamma adjustment -
  it is now applied to each of the three RGB channels separately.


2014-09-22  Kostas Nakos  <knakos@gmail.com>

* android/* : Bugfix no sound when machine is NTSC, small bugfixes and
  workarounds for OSL sound. Prepare for release.


2014-09-19  Kostas Nakos  <knakos@gmail.com>
* configure.ac: Switch to android-9 environment for OpenSL ES support.

* android/*: Add OpenSL ES native sound support for post-2.3 devices. Gained
  accurate sound playback. Added bindings for capstoggle & atari keys.


2014-09-16  Kostas Nakos  <knakos@gmail.com>
* atari.c: Skip ROM file search as some android builds go in infinite loop
  due to buggy platform implementation.

* configure.ac: Updated to newer android toolchain.

* android/*: Support for built-in Planetary Defense 2012 (courtesy and thanks
  to Tom Hudson), miscellaneous fixes, update to newer android toolchain.


** 3.1.0 released on 2014-04-12

2014-04-12  Petr Stehlik <pstehlik@sophics.cz>
* DOC/ChangeLog, DOC/NEWS: updated for new release

* README.1ST, atari800.spec, DOC/README, atari.h, atari800.man, configure.ac,
  util/export: version++


2014-04-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cfg.c, mxpokeysnd.[ch], pokeysnd.[ch], sound.c, ui.c, configure.ac: Moved the
  SYNCHRONIZED_SOUND code made more generic and moved out of mzpokeysnd.c to
  pokeysnd.c. Now synchronized sound is supported by both pokey sound engines.

* colours_pal.c: Minor formatting & constness fixes.

